--- a/src/index.html
+++ b/src/index.html
@@ -3,27 +3,23 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Jat</title>
+    <title>FrontEnd</title>
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
-
     <!-- Bootstrap Core CSS -->
     <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom CSS -->
     <link href="assets/css/style.css" rel="stylesheet">
     <!-- You can change the theme colors from here -->
     <link href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
-
-    <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
-
+    <app-root></app-root>
     <!-- ============================================================== -->
-    <!-- Preloader - style you can find in spinners.css -->
+    <!-- Preloader - estilo que puedes encontrar en spinners.css -->
     <!-- ============================================================== -->
     <div class="preloader">
         <div class="loader">
@@ -31,11 +27,6 @@
             <p class="loader__label">Cargando...</p>
         </div>
     </div>
-
-    <app-root></app-root>
-
-
-
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
@@ -57,4 +48,4 @@
 
 </body>
 
-</html>
+</html>s
