--- a/src/index.html
+++ b/src/index.html
@@ -3,23 +3,27 @@
 
 <head>
     <meta charset="utf-8">
-    <title>FrontEnd</title>
+    <title>Jat</title>
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
+
     <!-- Bootstrap Core CSS -->
     <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
     <!-- Custom CSS -->
     <link href="assets/css/style.css" rel="stylesheet">
     <!-- You can change the theme colors from here -->
     <link href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
+
+    <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
-    <app-root></app-root>
+
     <!-- ============================================================== -->
-    <!-- Preloader - estilo que puedes encontrar en spinners.css -->
+    <!-- Preloader - style you can find in spinners.css -->
     <!-- ============================================================== -->
     <div class="preloader">
         <div class="loader">
@@ -27,6 +31,11 @@
             <p class="loader__label">Cargando...</p>
         </div>
     </div>
+
+    <app-root></app-root>
+
+
+
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
@@ -48,4 +57,4 @@
 
 </body>
 
-</html>s
+</html>
